Update subtitle and add new content to index.html

--- a/index.html
+++ b/index.html
@@ -113,26 +113,28 @@
 <body>
   <header class="site-header">
     <h1>:)</h1>
-    <p class="subtitle">Petit texte que j'avais commencé à rédiger au début de ma 5/2 et que je complète aujourd'hui</p>
+    <p class="subtitle">Un texte écrit le 2 novembre</p>
   </header>
 
   <article class="story">
-    <!-- Ton texte complet -->
-    <p>— Mais alors… tout recommence ? demanda-t-il en baissant la tête.<br>— Oui, dit doucement l’étoile. Tout recommence toujours.<br>— Je dois tout recommencer ? soupira l’enfant. J’en ai marre. On m’avait promis que c’était fini…<br>— Les grandes personnes aiment promettre la fin, répondit l’étoile. Mais elles oublient que la vie n’est qu’un cercle, un peu comme tes pas dans le sable.<br>— Alors je vais toujours marcher ? demanda l’enfant.<br>— Tu vas marcher, oui… mais regarde : chaque fois que tu fais le tour, tu n’as plus les mêmes yeux, ni le même cœur.</p>
-    <p>L’enfant resta silencieux.<br>Puis il demanda :<br>— Et si je me lasse ?<br>L’étoile sourit :<br>— Alors assieds-toi un instant. Regarde le ciel. Le monde continue de tourner pour toi. Et quand tu seras prêt, tu recommenceras à marcher… mais ce ne sera déjà plus le même chemin.</p>
-    <p>L’enfant leva les yeux vers l’étoile, et il eut envie de croire qu’elle disait vrai.<br>— Mais comment ne pas me lasser si tout recommence ?<br>— En apprenant à embellir, répondit l’étoile.<br>— Embellir ?<br>— Oui. Les grandes personnes croient que la vie est une suite de tâches à accomplir. Mais toi, tu peux choisir de transformer chaque instant en trésor. Bois un verre d’eau comme si c’était une fête. Écoute le vent comme s’il chantait pour toi. Regarde une pierre comme si c’était un joyau.<br>— Mais… ce n’est pas un peu comme mentir ? demanda l’enfant.<br>— Non, dit l’étoile. C’est comme mettre une lumière dans ta propre maison. Si tu n’embellis pas ta vie, qui le fera pour toi ?</p>
-    <p>L’enfant sourit.<br>— Alors recommencer… ce n’est pas seulement refaire.<br>— Non, dit l’étoile. C’est réinventer. Et si tu romantises ta vie, chaque recommencement devient une histoire nouvelle.</p>
-    <p>Alors l’enfant marcha encore un peu, guidé par la lumière de l’étoile.<br>Sur le chemin, il trouva une fleur qui poussait seule entre deux pierres.</p>
-    <p>— Tu es bien courageuse, dit l’enfant, de pousser là où personne ne regarde.<br>La fleur se redressa fièrement :<br>— Justement ! Personne ne me regarde, alors je peux danser comme je veux.<br>— Danser ?<br>— Oui, répondit la fleur. Quand le vent me caresse, je danse pour lui. Quand la pluie tombe, je chante avec elle.</p>
-    <p>L’enfant cligna des yeux.<br>— Mais tu es toute petite. Personne ne voit ta danse ni ton chant.<br>— C’est vrai, dit la fleur. Mais moi, je le vois. Et ça me suffit.</p>
-    <p>L’enfant s’assit près d’elle.<br>— Alors… tu romantises ta vie, toi aussi ?<br>— Si tu veux l’appeler comme ça. Moi, j’appelle ça “vivre avec poésie”. Chaque goutte d’eau devient un diamant, chaque rayon de soleil devient un ruban d’or.<br>— Et ça ne te fatigue jamais ?<br>— Non, répondit la fleur. Parce qu’ainsi, je ne recommence jamais vraiment. Chaque jour devient différent, même si le vent souffle toujours et si la pluie retombe encore.</p>
-    <p>L’enfant ferma les yeux, et il crut sentir la danse de la fleur, légère, invisible mais éclatante.</p>
-    <p>L’enfant se dit :<br>— Peut-être que moi aussi, je pourrais apprendre à danser avec le vent.</p>
-    <p>La fleur rit doucement.<br>— Tu peux, bien sûr. Mais les grandes personnes t’ont peut-être appris à marcher droit, sans regarder les nuages.<br>— Oui… dit l’enfant. Elles m’ont dit qu’il fallait aller vite, ne pas perdre de temps.<br>— Pourtant, continua la fleur, le temps n’est jamais perdu quand tu l’offres à la beauté.</p>
-    <p>L’enfant resta songeur.<br>— Et si personne ne comprend ma danse ?<br>— Danse quand même, répondit la fleur. Car si tu ne l’offres pas au monde, offre-la au moins à ton cœur.</p>
-    <p>Il resta longtemps auprès d’elle. Puis, au moment de repartir, la fleur ajouta :<br>— N’oublie pas : la vie n’est pas seulement faite pour avancer. Elle est faite pour être admirée.</p>
-    <p>Alors l’enfant reprit sa marche, et il s’aperçut que le chemin, sous la lumière de l’étoile, n’était plus le même.<br>Chaque pierre brillait comme une promesse. Chaque souffle de vent devenait une caresse.<br>Et il comprit que romantiser sa vie, ce n’était pas fuir le réel… c’était lui donner des ailes.</p>
-  </article>
+  <p>— Tu crois qu’on tiendra ? demanda la fille d’une voix basse, comme si la distance pouvait l’entendre.<br>— Oui, répondit doucement le garçon. Ce n’est pas la distance qui sépare, c’est l’oubli. Et moi, je ne t’oublie pas.</p>
+
+  <p>Elle resta silencieuse un instant.<br>— Pourtant, tu es si loin…<br>— Loin des yeux, peut-être, dit le garçon. Mais tout près du cœur. Et tu sais, quand on aime vraiment, la présence ne dépend plus des kilomètres. Elle vit dans les pensées, dans les rêves, dans les petits gestes du quotidien.</p>
+
+  <p>Elle baissa la tête.<br>— Et quand la solitude me serre un peu trop fort ?<br>— Alors ferme les yeux, répondit-il. Parce que quand tu fermes les yeux, je suis encore plus près. Tu n’as plus besoin de me voir pour me sentir. C’est comme écouter une étoile : on ne la touche pas, mais elle éclaire quand même.</p>
+
+  <p>Elle sourit.<br>— Tu crois vraiment qu’on peut aimer à travers le vent et les écrans ?<br>— Bien sûr. Regarde les étoiles : elles sont très loin, et pourtant on les regarde chaque soir comme si elles nous répondaient. L’amour, c’est un peu pareil : une lumière qui voyage sans jamais se perdre.</p>
+
+  <p>Le silence revint, mais il était devenu doux. On aurait dit que la distance elle-même s’était apaisée.<br>— Alors, dit la fille, tu crois que la distance peut être belle, finalement ?<br>— Oui, répondit le garçon. Parce qu’elle nous apprend à aimer autrement. Elle nous apprend la patience, la confiance… et la joie de se retrouver.</p>
+
+  <p>Elle ferma encore les yeux, très fort, pour voir s’il disait vrai.<br>Et dans ce noir tranquille, elle le sentit : sa voix, son sourire, son regard — tout était là, juste derrière ses paupières.</p>
+
+  <p>— Tu vois ? murmura le garçon. Quand on ferme les yeux, la distance disparaît. Et ce qu’il reste, c’est l’essentiel.<br>— L’essentiel ?<br>— Oui, dit-il. Ce qu’on ne voit bien qu’avec le cœur.</p>
+
+  <p>Alors elle rouvrit les yeux, et le monde semblait un peu plus doux.<br>La distance n’avait pas disparu… mais elle brillait maintenant, comme une étoile qui veille, quelque part entre eux deux.</p>
+</article>
+
+
 
   <figure class="hero">
     <img src="images/samuel.jpg" alt="Image du texte" />
