Update article content and change image source

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=EB+Garamond&display=swap" rel="stylesheet">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Petit texte que j'avais commencé à rédiger au début de ma 5/2 et que je complète aujourd'hui</title>
+  <title></title>
   <style>
     body {
       margin: 0;
@@ -116,28 +116,27 @@
     <p class="subtitle">Un texte écrit le 2 novembre</p>
   </header>
 
-  <article class="story">
-  <p>— Tu crois qu’on tiendra ? demanda la fille d’une voix basse, comme si la distance pouvait l’entendre.<br>— Oui, répondit doucement le garçon. Ce n’est pas la distance qui sépare, c’est l’oubli. Et moi, je ne t’oublie pas.</p>
+<article class="story">
+  <p>— Tu crois qu’on tiendra ? demanda la fille, la voix un peu tremblante à travers l’écran. Le visage du garçon se figea un instant, puis il sourit doucement.<br>— Bien sûr qu’on tiendra. On ne se perd pas parce qu’on s’éloigne. On se perd seulement quand on cesse de regarder dans la même direction. Même loin de toi, mes pas suivent encore les tiens, comme deux étoiles qui tournent autour du même ciel.</p>
 
-  <p>Elle resta silencieuse un instant.<br>— Pourtant, tu es si loin…<br>— Loin des yeux, peut-être, dit le garçon. Mais tout près du cœur. Et tu sais, quand on aime vraiment, la présence ne dépend plus des kilomètres. Elle vit dans les pensées, dans les rêves, dans les petits gestes du quotidien.</p>
+  <p>Un silence doux s’installa. La connexion grésilla, l’image se figea, mais leurs cœurs continuaient de parler à travers les pixels. <br>— Parfois, j’ai peur que tu t’habitues sans moi, murmura-t-elle. <br>— Alors souviens-toi, répondit-il. Le soleil aussi s’éloigne chaque nuit, mais il revient toujours au matin. Et s’il revient, c’est parce qu’il n’a jamais vraiment cessé de briller pour la Terre. Moi non plus, je n’arrête pas de briller pour toi, même de loin.</p>
 
-  <p>Elle baissa la tête.<br>— Et quand la solitude me serre un peu trop fort ?<br>— Alors ferme les yeux, répondit-il. Parce que quand tu fermes les yeux, je suis encore plus près. Tu n’as plus besoin de me voir pour me sentir. C’est comme écouter une étoile : on ne la touche pas, mais elle éclaire quand même.</p>
+  <p>Elle sourit, malgré elle. <br>— Et si la nuit devient trop longue ? <br>— Regarde le ciel, dit-il doucement. Il y a toujours une étoile pour nous deux. Quand tu lèves les yeux, je fais pareil. Alors même si nos bras sont vides, nos regards se rejoignent quelque part, là-haut. Loin des yeux, peut-être, mais si proches du cœur. Et parfois, quand tu fermes les yeux, c’est encore mieux : je suis juste là, dans la chaleur que tu sens, dans le souvenir que tu portes.</p>
 
-  <p>Elle sourit.<br>— Tu crois vraiment qu’on peut aimer à travers le vent et les écrans ?<br>— Bien sûr. Regarde les étoiles : elles sont très loin, et pourtant on les regarde chaque soir comme si elles nous répondaient. L’amour, c’est un peu pareil : une lumière qui voyage sans jamais se perdre.</p>
+  <p>Elle inspira profondément, comme pour attraper un peu de lui dans l’air. <br>— C’est dur, tu sais… d’aimer à distance. <br>— Oui, dit-il. Mais la distance, c’est juste le vent entre deux flammes : si le feu est petit, il s’éteint. S’il est vrai, il grandit. Et le nôtre, je le sens chaque jour un peu plus grand. Tu vois, le vent ne fait pas mourir la flamme. Il la rend plus forte, plus danseuse, plus vivante.</p>
 
-  <p>Le silence revint, mais il était devenu doux. On aurait dit que la distance elle-même s’était apaisée.<br>— Alors, dit la fille, tu crois que la distance peut être belle, finalement ?<br>— Oui, répondit le garçon. Parce qu’elle nous apprend à aimer autrement. Elle nous apprend la patience, la confiance… et la joie de se retrouver.</p>
+  <p>Elle rit doucement. <br>— Tu parles comme un poète. <br>— Peut-être, répondit-il. Peut-être parce que t’aimer, c’est la seule poésie que je sais faire. Les grandes personnes disent que la distance détruit, mais elles ne savent pas qu’elle construit aussi. Elle apprend à aimer autrement : avec la patience, la confiance, les mots. Et chaque mot devient une caresse qu’on envoie à travers le ciel.</p>
 
-  <p>Elle ferma encore les yeux, très fort, pour voir s’il disait vrai.<br>Et dans ce noir tranquille, elle le sentit : sa voix, son sourire, son regard — tout était là, juste derrière ses paupières.</p>
+  <p>L’écran devint un miroir. Chacun vit dans les yeux de l’autre un peu de courage, un peu de lumière. <br>— Alors on continue ? demanda-t-elle. <br>— Oui, répondit-il. Mais pas juste à attendre. À vivre. À embellir. À remplir nos jours de beauté, même séparés. Comme deux étoiles qui dansent dans le même ciel, sans jamais se toucher, mais qui ne cessent pourtant de briller l’une pour l’autre.</p>
 
-  <p>— Tu vois ? murmura le garçon. Quand on ferme les yeux, la distance disparaît. Et ce qu’il reste, c’est l’essentiel.<br>— L’essentiel ?<br>— Oui, dit-il. Ce qu’on ne voit bien qu’avec le cœur.</p>
-
-  <p>Alors elle rouvrit les yeux, et le monde semblait un peu plus doux.<br>La distance n’avait pas disparu… mais elle brillait maintenant, comme une étoile qui veille, quelque part entre eux deux.</p>
+  <p>Elle posa la main sur son cœur, comme pour y garder ses mots. <br>— Promets-moi qu’on se retrouvera plus beaux. <br>— Je te le promets, dit-il. Parce que pendant que tu deviens la meilleure version de toi là-bas, je deviens le mien ici. Et quand on se reverra, on se reconnaîtra sans se chercher : nos âmes auront grandi ensemble. <br>Et même si la vie nous fait marcher sur deux chemins différents, tant que nos cœurs se regardent, il n’y a jamais vraiment de distance.</p>
 </article>
 
 
 
+
   <figure class="hero">
-    <img src="images/samuel.jpg" alt="Image du texte" />
+    <img src="images/illustration2.jpg" alt="Image du texte" />
   </figure>
 </body>
 </html>
