Update subtitle date in index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <body>
   <header class="site-header">
     <h1>:)</h1>
-    <p class="subtitle">Un texte écrit le 2 novembre</p>
+    <p class="subtitle">6 novembre 2025</p>
   </header>
 
 <article class="story">
